# FAKE-NEWS-DETECTION

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
docs/: sample-preview.html
src/news_intel/: __init__.py  analyzer.py  models.py  reference_finder.py  text_processing.py  ui.py
tests/: test_analyzer.py  test_text_processing.py
