[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "news-intelligence-analyzer"
version = "0.1.0"
description = "AI narrative investigation system built with Streamlit"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "News Intelligence Analyzer Contributors"}]
license = {text = "MIT"}
dependencies = [
  "streamlit>=1.32.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
